fixing zoom in on mobile

--- a/image-edit/index.css
+++ b/image-edit/index.css
@@ -10,7 +10,7 @@ h1 {
     margin: auto;
     margin-top: 25px;
     padding: 25px;
-    width: 800px;
+    width: 60em;
     position: relative;
     background-color: white;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
